<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08203e"
    tools:context=".Fragments.MensajeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:textColor="#FFFFFF"
            android:textSize="66sp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txt_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg"
                android:textColor="#FEFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mensajes"
                android:textColor="#FEFFFF"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textMultiLine"
                android:minHeight="100dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txtTelefono"
                android:textColor="#FEFFFF"
                android:text="@string/telf"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:digits="1234567890 "
                android:hint="@string/ingrese_telef"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="#FEFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_sms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/enviar"
                android:text="@string/btn_enviar"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button

                android:id="@+id/btnEliminar"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:background="@drawable/btn_uno"
                android:drawableLeft="@drawable/ic_borrar"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>