<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo"
    tools:context=".Fragments.InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:id="@+id/linerLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#3F51B5"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp" />

        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">-->
            <GridLayout
                android:id="@+id/idGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:columnCount="2"
                android:rowCount="2"
                android:layout_marginTop="38dp"
                android:layout_below="@id/linerLayout">

                <androidx.cardview.widget.CardView
                    android:id="@+id/juli"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="55dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="#ffffff"
                    android:foreground="?selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/julit"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="@string/juli"
                            android:layout_marginTop="-38sp"
                            android:textAlignment="center"
                            android:textColor="#8BC34A"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/emily"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="55dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="#ffffff"
                    android:foreground="?selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/emily"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="@string/emily"
                            android:layout_marginTop="-38sp"
                            android:textAlignment="center"
                            android:textColor="#855ECA"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/jairo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="55dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="#ffffff"
                    android:foreground="?selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/jairo"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="@string/jairo"
                            android:layout_marginTop="-38sp"
                            android:textAlignment="center"
                            android:textColor="#03A9F4"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/andrea"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="55dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="#ffffff"
                    android:foreground="?selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/andrea"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="@string/andrea"
                            android:layout_marginTop="-38sp"
                            android:textAlignment="center"
                            android:textColor="#D7E167DF"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>
<!--        </LinearLayout>-->
    </RelativeLayout>


</FrameLayout>